// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListRowHeader renders  header for contributor editor control with delete all disabled 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all items?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <WithStyles(Grid)
    alignItems="center"
    className=""
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      sm={6}
      xs={5}
    >
      <WithStyles(Typography)
        variant="caption"
      >
        Name
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={5}
      xs={5}
    >
      <WithStyles(Typography)
        variant="caption"
      >
        Reorder items
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className=""
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(Tooltip)
        title="Remove all items"
      >
        <WithStyles(IconButton)
          disabled={true}
          onClick={[Function]}
        >
          <pure(DeleteForeverIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`ListRowHeader renders  header for contributor editor control with name and delete all button only 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all items?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <WithStyles(Grid)
    alignItems="center"
    className=""
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      sm={6}
      xs={5}
    >
      <WithStyles(Typography)
        variant="caption"
      >
        Name
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={5}
      xs={5}
    >
      <WithStyles(Typography)
        variant="caption"
      >
        Reorder items
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className=""
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(Tooltip)
        title="Remove all items"
      >
        <WithStyles(IconButton)
          disabled={false}
          onClick={[Function]}
        >
          <pure(DeleteForeverIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;
